--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 
+
 .mb-lg-0{
     margin:0 auto;
 }
@@ -31,7 +32,7 @@ width:50%;
 .fw-bolder {
     font-weight: bolder !important;
     width: 96%;
-    font-size: 3rem;
+    font-size: 359rem;
     margin-left: 2rem;
 }
 
@@ -42,6 +43,7 @@ width:50%;
     background-size: cover;
     background-attachment: fixed;
     height: 80vh;
+
 }
 .span2{
     background: linear-gradient(120deg, #e4a0a1, #e4a0a1);
@@ -52,11 +54,204 @@ width:50%;
 
 .div-text{
     position: absolute;
-    margin-top: -30rem;
-    margin-left: 10% !important;
+    margin-top: -32rem;
+    margin-left: 0% !important;
 }
+
+.text-font {
+    font-weight: bolder !important;
+    width: 96%;
+    font-size: 359rem;
+    margin-left: 2rem;
+}
+
+.svg-1{
+    background-color:rgb(255, 220, 154);
+    border-radius: 50px;
+    padding: 25px;
+}
+
+.svg-2{
+    background-color:rgb(187, 240, 187);
+    border-radius: 50px;
+    padding: 25px;
+}
+
+.svg-3{
+    background-color: rgb(247, 219, 223);
+    border-radius: 50px;
+    padding: 25px;
+}
+
+.svg-4{
+    background-color: rgb(213, 251, 253);
+    border-radius: 50px;
+    padding: 25px;
+}
+
+.fw-maintext {
+    color: rgb(39, 39, 39);
+    font-weight: 800;
+    width: 96%;
+   font-size: 50px;
+    
+}
+
+
+.bsb-overlay-hover>figcaption {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    pointer-events: none;
+    z-index: 1;
+   
+}
+
+.bsb-overlay-hover>figcaption {
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+*, :after, :before {
+    box-sizing: border-box;
+}
+figcaption {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+.bsb-overlay-hover {
+    --bsb-overlay-hover-opacity: 0.5;
+    --bsb-overlay-hover-bg-color: var(--bs-black-rgb);
+    position: relative;
+}
+
+.bi-arrow-right-short {
+    margin-left: 48%;
+    margin-top: -8%;
+}
+
+
+
+
+
+.position{
+    color: white;
+    font-size: 19px;
+    font-weight: 500;
+    color: white;
+    font-size: 19px;
+    font-weight: 500;
+    margin-left: 8%;
+    margin-top: -10%;
+    position: absolute; 
+   visibility: hidden;
+}
+
+
+.position:hover{
+   visibility: visible;
+   color: white;
+   font-size: 19px;
+   font-weight: 500;
+   position: absolute;
+   visibility: visible;
+}
+
+.right-001{
+    opacity: 0;
+    transition: .5s;
+    color: white;
+}
+.disable:hover .right-001{
+    opacity: 1;
+}
+.image-001{
+    transform: scale(1.3);
+    transition: .4s all;
+}
+.disable:hover .image-001{
+    transform: scale(1.1);
+}
+.sub:hover:hover{
+    background: rgba(0, 0, 0, 0.63);
+}
+
+.div-img{
+    transform: scale(1.2);
+    transition: all 0.5s;
+    border: 1px solid blue;
+}
+.div-main:hover .div-img{
+    transform: scale(1);
+}
+.div-sub{
+    opacity: 0;
+    color: white;
+    transition: all 0.5s;
+}
+.div-main:hover .div-sub{
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.448);
+}   
+
+
 @media (max-width:991px){
     #flex{
         flex-direction:column;
     }
+    .navbar-collapse{
+        margin-left: 5%;
+    }
+    .div-main{
+        width: 14rem;
+    }
+   
+    
+}
+
+@media screen and (max-width: 320px) {
+    .div-main{
+        width: 15rem;
+        margin-left: 7%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .div-main{
+        width: 14rem;
+        
+    }
+}
+@media screen and (max-width: 1024px) {
+    .div-main{
+        width: 18rem;
+        
+    }
+}
+
+@media (min-width:320px){
+    .div-text{
+        position: absolute;
+        margin-top: -32rem;
+        margin-left:x-large;
+    }
+
+    .fw-bolder{
+        margin-left: 0rem;
+        font-size: 30px;
+    }
+    .fw-bold{
+        font-size: 1.5rem;
+        text-align: center;
+    }
+   
+
+    
+ 
 }
