--- a/src/output.css
+++ b/src/output.css
@@ -588,6 +588,38 @@ video {
   }
 }
 
+.tw-fixed {
+  position: fixed;
+}
+
+.tw-absolute {
+  position: absolute;
+}
+
+.tw-relative {
+  position: relative;
+}
+
+.tw-right-0 {
+  right: 0px;
+}
+
+.tw-top-0 {
+  top: 0px;
+}
+
+.tw-z-10 {
+  z-index: 10;
+}
+
+.tw-z-50 {
+  z-index: 50;
+}
+
+.tw-m-3 {
+  margin: 0.75rem;
+}
+
 .tw-mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -606,8 +638,40 @@ video {
   margin-bottom: 1rem;
 }
 
+.tw-mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .tw-mb-8 {
   margin-bottom: 2rem;
+}
+
+.tw-ml-60 {
+  margin-left: 15rem;
+}
+
+.tw-mt-10 {
+  margin-top: 2.5rem;
+}
+
+.tw-mt-16 {
+  margin-top: 4rem;
+}
+
+.tw-mt-24 {
+  margin-top: 6rem;
+}
+
+.tw-mt-36 {
+  margin-top: 9rem;
+}
+
+.tw-block {
+  display: block;
+}
+
+.tw-inline-block {
+  display: inline-block;
 }
 
 .tw-flex {
@@ -626,8 +690,20 @@ video {
   height: 83.333333%;
 }
 
+.tw-h-full {
+  height: 100%;
+}
+
+.tw-w-96 {
+  width: 24rem;
+}
+
 .tw-w-full {
   width: 100%;
+}
+
+.tw-w-screen {
+  width: 100vw;
 }
 
 .tw-flex-col {
@@ -642,28 +718,24 @@ video {
   justify-content: center;
 }
 
-.tw-rounded-3xl {
-  border-radius: 1.5rem;
+.tw-justify-between {
+  justify-content: space-between;
 }
 
-.tw-rounded-sm {
-  border-radius: 0.125rem;
+.tw-overflow-hidden {
+  overflow: hidden;
 }
 
-.tw-rounded-none {
-  border-radius: 0px;
+.tw-rounded {
+  border-radius: 0.25rem;
 }
 
 .tw-rounded-2xl {
   border-radius: 1rem;
 }
 
-.tw-rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.tw-rounded {
-  border-radius: 0.25rem;
+.tw-rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .tw-border-0 {
@@ -683,18 +755,53 @@ video {
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
 
+.tw-bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.tw-bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+
 .tw-bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
-.tw-bg-transparent {
-  background-color: transparent;
+.tw-bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.tw-bg-orange-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
+}
+
+.tw-bg-orange-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 247 237 / var(--tw-bg-opacity));
+}
+
+.tw-bg-pink-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 231 243 / var(--tw-bg-opacity));
+}
+
+.tw-bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .tw-bg-red-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.tw-bg-transparent {
+  background-color: transparent;
 }
 
 .tw-object-cover {
@@ -707,20 +814,12 @@ video {
      object-position: center;
 }
 
-.tw-p-8 {
-  padding: 2rem;
-}
-
 .tw-p-3 {
   padding: 0.75rem;
 }
 
 .tw-p-4 {
   padding: 1rem;
-}
-
-.tw-p-5 {
-  padding: 1.25rem;
 }
 
 .tw-px-5 {
@@ -746,9 +845,9 @@ video {
   text-align: center;
 }
 
-.tw-text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.tw-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .tw-text-6xl {
@@ -766,16 +865,6 @@ video {
   line-height: 1.75rem;
 }
 
-.tw-text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.tw-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .tw-font-bold {
   font-weight: 700;
 }
@@ -786,6 +875,10 @@ video {
 
 .tw-font-medium {
   font-weight: 500;
+}
+
+.tw-font-semibold {
+  font-weight: 600;
 }
 
 .tw-leading-relaxed {
@@ -805,11 +898,6 @@ video {
 .tw-text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.tw-text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .tw-text-white {
@@ -856,7 +944,7 @@ video {
 .fw-bolder {
   font-weight: bolder !important;
   width: 96%;
-  font-size: 3rem;
+  font-size: 359rem;
   margin-left: 2rem;
 }
 
@@ -878,18 +966,194 @@ video {
 
 .div-text{
   position: absolute;
-  margin-top: -30rem;
-  margin-left: 10% !important;
+  margin-top: -32rem;
+  margin-left: 0% !important;
+}
+
+.text-font {
+  font-weight: bolder !important;
+  width: 96%;
+  font-size: 359rem;
+  margin-left: 2rem;
+}
+
+.svg-1{
+  background-color:rgb(255, 220, 154);
+  border-radius: 50px;
+  padding: 25px;
+}
+
+.svg-2{
+  background-color:rgb(187, 240, 187);
+  border-radius: 50px;
+  padding: 25px;
+}
+
+.svg-3{
+  background-color: rgb(247, 219, 223);
+  border-radius: 50px;
+  padding: 25px;
+}
+
+.svg-4{
+  background-color: rgb(213, 251, 253);
+  border-radius: 50px;
+  padding: 25px;
+}
+
+.fw-maintext {
+  color: rgb(39, 39, 39);
+  font-weight: 800;
+  width: 96%;
+  font-size: 50px;
+}
+
+.bsb-overlay-hover>figcaption {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  pointer-events: none;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+*, :after, :before {
+  box-sizing: border-box;
+}
+
+figcaption {
+  display: block;
+  unicode-bidi: isolate;
+}
+
+.bsb-overlay-hover {
+  --bsb-overlay-hover-opacity: 0.5;
+  --bsb-overlay-hover-bg-color: var(--bs-black-rgb);
+  position: relative;
+}
+
+.bi-arrow-right-short {
+  margin-left: 48%;
+  margin-top: -8%;
+}
+
+.position{
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+  margin-left: 8%;
+  margin-top: -10%;
+  position: absolute;
+  visibility: hidden;
+}
+
+.position:hover{
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+  position: absolute;
+  visibility: visible;
+}
+
+.right-001{
+  opacity: 0;
+  transition: .5s;
+  color: white;
+}
+
+.disable:hover .right-001{
+  opacity: 1;
+}
+
+.image-001{
+  transform: scale(1.3);
+  transition: .4s all;
+}
+
+.disable:hover .image-001{
+  transform: scale(1.1);
+}
+
+.sub:hover:hover{
+  background: rgba(0, 0, 0, 0.63);
+}
+
+.div-img{
+  transform: scale(1.2);
+  transition: all 0.5s;
+  border: 1px solid blue;
+}
+
+.div-main:hover .div-img{
+  transform: scale(1);
+}
+
+.div-sub{
+  opacity: 0;
+  color: white;
+  transition: all 0.5s;
+}
+
+.div-main:hover .div-sub{
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.448);
 }
 
 @media (max-width:991px){
   #flex{
     flex-direction:column;
   }
+
+  .navbar-collapse{
+    margin-left: 5%;
+  }
+
+  .div-main{
+    width: 14rem;
+  }
 }
 
-.hover\:tw-border:hover {
-  border-width: 1px;
+@media screen and (max-width: 320px) {
+  .div-main{
+    width: 15rem;
+    margin-left: 7%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .div-main{
+    width: 14rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .div-main{
+    width: 18rem;
+  }
+}
+
+@media (min-width:320px){
+  .div-text{
+    position: absolute;
+    margin-top: -32rem;
+    margin-left:x-large;
+  }
+
+  .fw-bolder{
+    margin-left: 0rem;
+    font-size: 30px;
+  }
+
+  .fw-bold{
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
 .hover\:tw-border-solid:hover {
@@ -911,24 +1175,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:tw-text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:tw-text-black:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.hover\:tw-text-red-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(127 29 29 / var(--tw-text-opacity));
-}
-
 .hover\:tw-text-red-800:hover {
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
+}
+
+.hover\:tw-text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:tw-duration-500:hover {
@@ -940,8 +1194,16 @@ video {
   outline-offset: 2px;
 }
 
-@media (min-width: 640px) {
-  .sm\:tw-text-4xl {
+@media not all and (min-width: 640px) {
+  .max-sm\:tw-block {
+    display: block;
+  }
+
+  .max-sm\:tw-w-screen {
+    width: 100vw;
+  }
+
+  .max-sm\:tw-text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
